Fix Issue #19 Resume page on mobile devices
This commit fixes Issue #19 by
- Implementing more breakpoint rules for PDF Viewers
- Implementing more responsive rules for Page Header component
- Aiding contrast on mobile by adding border and making PDF fit in parent div

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -51,7 +51,11 @@ body {
 
 @layer components {
     .btn-sapphire {
-        @apply bg-sapphire hover:bg-sapphire-darker text-white font-semibold py-2 px-4 rounded;
+        @apply bg-sapphire hover:bg-sapphire-darker text-white font-semibold py-2 px-4 rounded md:text-base text-sm;
+    }
+
+    .page-header {
+        @apply text-sapphire font-bold md:text-left text-center md:text-6xl text-5xl;
     }
 }
 
